--- a/wisata_candi/pubspec.yaml
+++ b/wisata_candi/pubspec.yaml
@@ -1,22 +1,29 @@
-name: wisata_candi
-description: "A new Flutter project."
-publish_to: 'none'
+name: flutter_wisata_candi
+description: "Flutter Project to Display Wisata Candi"
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.2
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^3.3.0
+  shared_preferences:
+  flutter_launcher_icons:
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/logo_wisata_candi.png"
+
 flutter:
   uses-material-design: true
   assets:
-  - images/
+    - images/
