--- a/wisata_candi/web/manifest.json
+++ b/wisata_candi/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "wisata_candi",
-    "short_name": "wisata_candi",
+    "name": "flutter_wisata_candi",
+    "short_name": "flutter_wisata_candi",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
